--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS slider</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="slider.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <div id="slider">
